fix swagger karyawan, laporan, riwayat pembayaran
